<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/_1"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonZero"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/_2"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintStart_toEndOf="@+id/buttonOne" />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/_3"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeleteAll"
        app:layout_constraintStart_toEndOf="@+id/buttonTwo" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/_4"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonOne"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/_5"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwo"
        app:layout_constraintStart_toEndOf="@+id/buttonFour" />

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/_6"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonThree"
        app:layout_constraintStart_toEndOf="@+id/buttonFive" />

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/_7"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonFour"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/_8"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonFive"
        app:layout_constraintStart_toEndOf="@+id/buttonSeven" />

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/_9"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSix"
        app:layout_constraintStart_toEndOf="@+id/buttonEight" />

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delete"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonZero" />

    <Button
        android:id="@+id/buttonDeleteAll"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/deleteAll"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDelete" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/plus"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDeleteAll" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="0dp"
        android:text="@string/minus"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/buttonThree" />

    <Button
        android:id="@+id/buttonMultiple"
        android:layout_width="75dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="0dp"
        android:text="@string/multiple"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/buttonSix"
        app:layout_constraintTop_toBottomOf="@id/buttonDivider" />

    <Button
        android:id="@+id/buttonDivider"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="0dp"
        android:text="@string/divide"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNine"
        app:layout_constraintTop_toBottomOf="@id/divider789" />

    <View
        android:id="@+id/divider789"
        android:layout_width="409dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/buttonEight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewInputTask"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="132dp"
        tools:text="@string/_0"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/dividerInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/dividerInput"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="120dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider789"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <View
        android:id="@+id/dividerResult"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="128dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider789"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInputTask"
        app:layout_constraintVertical_bias="0.899" />

    <TextView
        android:id="@+id/textViewInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewInputTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_answer_is"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/dividerResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerInput"
        app:layout_constraintVertical_bias="0.358" />

    <Button
        android:id="@+id/buttonCheckAnswer"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/check"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/divider789"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerResult" />


</androidx.constraintlayout.widget.ConstraintLayout>